--- a/docs/devices/067776.md
+++ b/docs/devices/067776.md
@@ -29,8 +29,20 @@ pageClass: device-page
 Model number depends on the country and the colour of the devices.
 French models are branded as Céliane with Netatmo, and models for this device depends on the colour, with the following numbers: "0 677 26", "0 677 76" and "0 648 96".
 Spanish models are branded as Legrand Valena Next, and models for this device depends on the colour, with the following numbers: "7 418 07", "7 418 37" and "7 418 67".
-<!-- Notes END: Do not edit below this line -->
 
+
+You can calibrate your device (to enable position support) by closing the shutter (or opening it if your cover position is inverted) and pressing both the up and down buttons for about 5 seconds until you see a blinking yellow light. Follow the steps depending on the calibration mode:
+* NLLV modes:
+When switching to those modes, the switch starts the calibration itself. In case the blind is in an intermediate position, it will be raised prior starting the calibration cycle. The switch will then command the blind up and down twice fully automatically. The entire process can last up to 5 minutes.
+* Up / Down / Stop:
+No calibration required.
+* Temporal:
+Once the blind is in the up position, start the calibration by pressing and holding the down button, until the blind reaches to bottom stop. Once there, release the button, and shortly press the down button. The relay should then click. Subsequently press and hold the up button until the blind gets to the upper stop.
+Repeat the cycle: Press and hold down until the blind reaches the bottom stop, then press and hold until it reaches the top position (Note that there is no need to shortly press the down button in the second sweep cycle)
+* Venetian / BSO
+Similar to the temporal calibration method, with the exception of the second sweep cycle!
+In essence, do the first sweep as mentioned in the "Temporal" section, and once done, press and hold the down button until the venetian blind reaches the botton position. Then press and hold the UP switch: this switch will then calibrate the blind tilt angle by activating the switch briefly 4 times in a sequence.
+<!-- Notes END: Do not edit below this line -->
 
 ## OTA updates
 This device supports OTA updates, for more information see [OTA updates](../guide/usage/ota_updates.md).
